--- a/index.html
+++ b/index.html
@@ -1787,27 +1787,54 @@
 			<div class="text-center mb-8">
 				<!-- Brand -->
 				<div class="mb-6">
-					<div class="text-2xl font-bold text-gradient mb-1">MUHIB ACADEMY
-					</div>
-					<div class="text-sm text-emerald-600 font-medium">Din va Dunyo Ilmi
-					</div>
+					<img src="./MuhibAcademyLogo.png" alt="MUHIB ACADEMY Logo" class="h-12 w-auto mx-auto block">
 				</div>
+
 
 				<!-- Tagline -->
 				<p class="text-gray-600 mb-8 max-w-md mx-auto">
-					Empowering students worldwide with quality education
+					Muhib academy – Ilm, tarbiya va e’tiqod uygʻunligidagi makon!
 				</p>
 
 				<!-- Contact Icons -->
 				<div class="flex justify-center space-x-6 mb-6">
-					<div class="flex items-center space-x-2 social-icon cursor-pointer">
-						<svg class="w-5 h-5 icon-location " fill="currentColor" viewBox="0 0 20 20">
-							<path fill-rule="evenodd"
-								d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-								clip-rule="evenodd" />
-						</svg>
-						<span class="text-gray-700 text-sm hidden sm:inline">Tashkent</span>
-					</div>
+					<a href="">
+						<div class="flex items-center space-x-2 social-icon cursor-pointer">
+							<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="100"
+								viewBox="0 0 48 48">
+								<radialGradient id="yOrnnhliCrdS2gy~4tD8ma_Xy10Jcu1L2Su_gr1" cx="19.38" cy="42.035"
+									r="44.899" gradientUnits="userSpaceOnUse">
+									<stop offset="0" stop-color="#fd5"></stop>
+									<stop offset=".328" stop-color="#ff543f"></stop>
+									<stop offset=".348" stop-color="#fc5245"></stop>
+									<stop offset=".504" stop-color="#e64771"></stop>
+									<stop offset=".643" stop-color="#d53e91"></stop>
+									<stop offset=".761" stop-color="#cc39a4"></stop>
+									<stop offset=".841" stop-color="#c837ab"></stop>
+								</radialGradient>
+								<path fill="url(#yOrnnhliCrdS2gy~4tD8ma_Xy10Jcu1L2Su_gr1)"
+									d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z">
+								</path>
+								<radialGradient id="yOrnnhliCrdS2gy~4tD8mb_Xy10Jcu1L2Su_gr2" cx="11.786" cy="5.54"
+									r="29.813" gradientTransform="matrix(1 0 0 .6663 0 1.849)"
+									gradientUnits="userSpaceOnUse">
+									<stop offset="0" stop-color="#4168c9"></stop>
+									<stop offset=".999" stop-color="#4168c9" stop-opacity="0"></stop>
+								</radialGradient>
+								<path fill="url(#yOrnnhliCrdS2gy~4tD8mb_Xy10Jcu1L2Su_gr2)"
+									d="M34.017,41.99l-20,0.019c-4.4,0.004-8.003-3.592-8.008-7.992l-0.019-20	c-0.004-4.4,3.592-8.003,7.992-8.008l20-0.019c4.4-0.004,8.003,3.592,8.008,7.992l0.019,20	C42.014,38.383,38.417,41.986,34.017,41.99z">
+								</path>
+								<path fill="#fff"
+									d="M24,31c-3.859,0-7-3.14-7-7s3.141-7,7-7s7,3.14,7,7S27.859,31,24,31z M24,19c-2.757,0-5,2.243-5,5	s2.243,5,5,5s5-2.243,5-5S26.757,19,24,19z">
+								</path>
+								<circle cx="31.5" cy="16.5" r="1.5" fill="#fff"></circle>
+								<path fill="#fff"
+									d="M30,37H18c-3.859,0-7-3.14-7-7V18c0-3.86,3.141-7,7-7h12c3.859,0,7,3.14,7,7v12	C37,33.86,33.859,37,30,37z M18,13c-2.757,0-5,2.243-5,5v12c0,2.757,2.243,5,5,5h12c2.757,0,5-2.243,5-5V18c0-2.757-2.243-5-5-5H18z">
+								</path>
+							</svg>
+							<span class="text-gray-700 text-sm hidden sm:inline">Instagram</span>
+						</div>
+					</a>
 
 					<div class="flex items-center space-x-2 social-icon cursor-pointer">
 						<svg class="w-5 h-5 icon-phone" fill="currentColor" viewBox="0 0 20 20">
@@ -1825,14 +1852,24 @@
 						</svg>
 						<span class="text-gray-700 text-sm hidden sm:inline">info@academy.com</span>
 					</div>
+					<a href="https://t.me/muhibacademyuz">
 
-					<div class="flex items-center space-x-2 social-icon cursor-pointer">
-						<svg class="w-5 h-5 icon-telegram " fill="currentColor" viewBox="0 0 24 24">
-							<path
-								d="M12 0C5.374 0 0 5.373 0 12s5.374 12 12 12 12-5.373 12-12S18.626 0 12 0zm5.568 8.16c-.169 1.858-.896 6.728-.896 6.728-.302 1.693-1.124 1.993-1.848 1.458-.723-.536-8.926-5.776-8.926-5.776s-1.048-.722-.048-1.458c1-1.458 8.926-5.776 8.926-5.776s1.523-.966 1.523 0-.727 4.824-.727 4.824z" />
-						</svg>
-						<span class="text-gray-700 text-sm hidden sm:inline">@AcademyBot</span>
-					</div>
+						<div class="flex items-center space-x-2 social-icon cursor-pointer">
+							<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="100"
+								viewBox="0 0 48 48">
+								<path fill="#29b6f6" d="M24,4C13,4,4,13,4,24s9,20,20,20s20-9,20-20S35,4,24,4z"></path>
+								<path fill="#fff"
+									d="M34,15l-3.7,19.1c0,0-0.2,0.9-1.2,0.9c-0.6,0-0.9-0.3-0.9-0.3L20,28l-4-2l-5.1-1.4c0,0-0.9-0.3-0.9-1	c0-0.6,0.9-0.9,0.9-0.9l21.3-8.5c0,0,0.7-0.2,1.1-0.2c0.3,0,0.6,0.1,0.6,0.5C34,14.8,34,15,34,15z">
+								</path>
+								<path fill="#b0bec5"
+									d="M23,30.5l-3.4,3.4c0,0-0.1,0.1-0.3,0.1c-0.1,0-0.1,0-0.2,0l1-6L23,30.5z"></path>
+								<path fill="#cfd8dc"
+									d="M29.9,18.2c-0.2-0.2-0.5-0.3-0.7-0.1L16,26c0,0,2.1,5.9,2.4,6.9c0.3,1,0.6,1,0.6,1l1-6l9.8-9.1	C30,18.7,30.1,18.4,29.9,18.2z">
+								</path>
+							</svg>
+							<span class="text-gray-700 text-sm hidden sm:inline">Telegram</span>
+						</div>
+					</a>
 				</div>
 
 				<!-- Social Media -->
@@ -1840,9 +1877,8 @@
 
 				<!-- Copyright -->
 				<div class="border-t border-gray-100 pt-6 text-center">
-					<p class="text-gray-500 text-sm">&copy; <span id="copyright-year">2025</span> MUHIB ACADEMY. All
-						rights
-						reserved.</p>
+					<p class="text-gray-500 text-sm">&copy; <span id="copyright-year">2025</span> MUHIB ACADEMY. Barcha
+						huquqlar himoyalangan.</p>
 				</div>
 			</div>
 	</footer>
